# chippi

./: .gitignore  CHIPPI  Cargo.toml  LICENSE-MIT  README.md  index.html  notes.txt
roms/: chippi.ch8
src/: chip8.rs  lib.rs  main.rs  program.rs
